Style updates, namespacing the component, adding buttons for row links instead of JS, fixing pagination and filtering scrolling

--- a/components/search/scss/_container.scss
+++ b/components/search/scss/_container.scss
@@ -7,7 +7,7 @@
 
 /* Search container
 ---------------------------------------------------------------------------------------------------- */
-.search {
+.component_search {
 	display: flex;
 	flex-wrap: wrap;
 	gap: v.$gap_2;
