--- a/components/search/scss/_field.scss
+++ b/components/search/scss/_field.scss
@@ -16,7 +16,7 @@
 
 /* Search field
 ---------------------------------------------------------------------------------------------------- */
-.search .field {
+.component_search .field {
 	position: relative;
 	flex-basis: 100%;
 
